--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,40 @@
-version: '3.8'
-
 services:
-  app:
+  dingus:
     build:
       context: .
+      dockerfile: docker/Dockerfile.dingus
       args:
         UID: ${UID}
         GID: ${GID}
     ports:
       - "${FASTAPI_PORT:-8000}:8000"
-      - "${STREAMLIT_PORT:-8501}:8501"
-
-    container_name: app
+    container_name: dingus
     volumes:
       - ./src:/src
+      - ./data:/data
+      - ./logs:/logs
+      - ./assets:/assets
     environment:
       - FASTAPI_PORT=8000
-      - STREAMLIT_PORT=8501
       - OPENAI_API_KEY=$OPENAI_API_KEY
+      - CHAT_API_URL=$CHAT_API_URL
+
+  frontend:
+    build:
+      context: .
+      dockerfile: docker/Dockerfile.frontend
+      args:
+        UID: ${UID}
+        GID: ${GID}
+    ports:
+      - "${STREAMLIT_PORT:-8501}:8501"
+    container_name: frontend
+    volumes:
+      - ./frontend:/frontend
+      - ./src:/src
+      - ./data:/data
+      - ./logs:/logs
+      - ./assets:/assets
+    environment:
+      - STREAMLIT_PORT=8501
       - CHAT_API_URL=$CHAT_API_URL
