--- a/docker/Dockerfile.dingus
+++ b/docker/Dockerfile.dingus
@@ -15,6 +15,9 @@ ARG GID=1001
 RUN groupadd -g ${GID} $USER_NAME && \
     useradd -m -u ${UID} --gid ${GID} $USER_NAME
 
+# Make dirs and change owner 
+RUN mkdir /logs /data && chown -R $USER_NAME:$USER_NAME /logs /data
+
 USER $USER_NAME
 
 WORKDIR /src
@@ -24,32 +27,31 @@ RUN python -m venv ${ENV_PATH}
 ENV PATH="$ENV_PATH/bin:$PATH" \
     PYTHONPATH="${PYTHONPATH}:/src/"
 
-# Copy over requirements
-COPY --chown=$USER_NAME:$USER_NAME requirements.txt /src/requirements.txt
-
-# Upgrade pip and install dependencies
-RUN pip install --upgrade pip
-RUN pip install -r /src/requirements.txt
+# Copy and install dependencies
+COPY --chown=$USER_NAME:$USER_NAME /requirements/dingus.txt /src/requirements.txt
+RUN pip install --upgrade pip && pip install -r /src/requirements.txt
 
 # Copy source code
-COPY --chown=$USER_NAME:$USER_NAME ./src /src/
+COPY --chown=$USER_NAME:$USER_NAME ./scripts /src/scripts
+COPY --chown=$USER_NAME:$USER_NAME ./data /data/ \
+    ./logs /logs/ \
+    ./src /src/ \
+    ./assets /assets/
+
+COPY --chown=$USER_NAME:$USER_NAME ./src/entrypoint.sh /src/scripts/entrypoint.sh 
 
 # Ensure scripts have execute permissions
 RUN chmod +x /src/scripts/
-
-# Ensure LF line ending
 RUN dos2unix /src/scripts/
 
-# Add aliases for scripts
+# Add aliases
 RUN echo 'alias format-checks="bash /src/scripts/format-checks.sh"' >> /home/$USER_NAME/.bashrc
 RUN echo 'alias code-checks="bash /src/scripts/code-checks.sh"' >> /home/$USER_NAME/.bashrc
 
-# Custom Shell Prompt
+# Custom shell prompt
 RUN echo 'PS1="\e[1;31m[$PROJECT_NAME] \e[1;34m\u@\h\e[m \w\$ "' >> /home/$USER_NAME/.bashrc
 
-
+# Expose port
 EXPOSE 8000
-EXPOSE 8501
 
-# Set the entrypoint
-ENTRYPOINT ["bash", "/src/scripts/entrypoint.sh"]
+ENTRYPOINT ["bash", "/src/entrypoint.sh"]
