--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - ./data:/data
       - ./logs:/logs
       - ./assets:/assets
+      - ./srcripts:/scripts
     environment:
       - FASTAPI_PORT=8000
       - OPENAI_API_KEY=$OPENAI_API_KEY
@@ -30,11 +31,11 @@ services:
       - "${STREAMLIT_PORT:-8501}:8501"
     container_name: frontend
     volumes:
-      - ./frontend:/frontend
-      - ./src:/src
+      - ./frontend/src:/src
       - ./data:/data
       - ./logs:/logs
       - ./assets:/assets
+      - ./srcripts:/scripts
     environment:
       - STREAMLIT_PORT=8501
       - CHAT_API_URL=$CHAT_API_URL
