--- a/docker/Dockerfile.dingus
+++ b/docker/Dockerfile.dingus
@@ -32,21 +32,21 @@ COPY --chown=$USER_NAME:$USER_NAME /requirements/dingus.txt /src/requirements.tx
 RUN pip install --upgrade pip && pip install -r /src/requirements.txt
 
 # Copy source code
-COPY --chown=$USER_NAME:$USER_NAME ./scripts /src/scripts
 COPY --chown=$USER_NAME:$USER_NAME ./data /data/ \
+    ./scripts /scripts/ \
     ./logs /logs/ \
     ./src /src/ \
     ./assets /assets/
 
-COPY --chown=$USER_NAME:$USER_NAME ./src/entrypoint.sh /src/scripts/entrypoint.sh 
+COPY --chown=$USER_NAME:$USER_NAME ./src/entrypoint.sh /scripts/entrypoint.sh 
 
 # Ensure scripts have execute permissions
-RUN chmod +x /src/scripts/
-RUN dos2unix /src/scripts/
+RUN chmod +x /scripts/
+RUN dos2unix /scripts/
 
 # Add aliases
-RUN echo 'alias format-checks="bash /src/scripts/format-checks.sh"' >> /home/$USER_NAME/.bashrc
-RUN echo 'alias code-checks="bash /src/scripts/code-checks.sh"' >> /home/$USER_NAME/.bashrc
+RUN echo 'alias format-checks="bash /scripts/format-checks.sh"' >> /home/$USER_NAME/.bashrc
+RUN echo 'alias code-checks="bash /scripts/code-checks.sh"' >> /home/$USER_NAME/.bashrc
 
 # Custom shell prompt
 RUN echo 'PS1="\e[1;31m[$PROJECT_NAME] \e[1;34m\u@\h\e[m \w\$ "' >> /home/$USER_NAME/.bashrc
