--- a/sample.env
+++ b/sample.env
@@ -1,8 +1,10 @@
 UID=1000
 GID=1001
 
+# Dinugs
 FASTAPI_PORT=8000
 STREAMLIT_PORT=8501
 OPENAI_API_KEY=xxx
 
+# Frontend
 CHAT_API_URL=http://host.docker.internal:8000
