--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
       - FASTAPI_PORT=8000
       - OPENAI_API_KEY=$OPENAI_API_KEY
       - CHAT_API_URL=$CHAT_API_URL
+      - LOKI_URL=$LOKI_URL
+      - LOKI_JOB_NAME=$LOKI_JOB_NAME
 
   frontend:
     build:
