--- a/sample.env
+++ b/sample.env
@@ -5,6 +5,7 @@ GID=1001
 FASTAPI_PORT=8000
 STREAMLIT_PORT=8501
 OPENAI_API_KEY=xxx
+LOKI_URL=http://host.docker.internal:3100
 
 # Frontend
 CHAT_API_URL=http://host.docker.internal:8000
