🧹Chore: Update sample.env with new environment variable names and values

--- a/sample.env
+++ b/sample.env
@@ -1,11 +1,13 @@
 UID=1000
 GID=1001
 
-# Frontend
+# frontend
 CHAT_API_URL=http://host.docker.internal:8000
 
-# Dinugs
+# dinugs
 FASTAPI_PORT=8000
 STREAMLIT_PORT=8501
-OPENAI_API_KEY=xxx
+OPENAI_API_KEY=OpenaiKeyHere
 LOKI_URL=http://host.docker.internal:3100
+LOKI_JOB_NAME=cpu_monitor
+
