✨ Add Qdrant service to docker-compose and update requirements.txt with new dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-fastapi==0.115.6
-uvicorn==0.34.0
+flake8==7.1.1
+mypy==1.14.1
 isort==5.13.2
 black==24.10.0
-mypy==1.14.1
-flake8==7.1.1
-openai==1.59.8
-pandas==2.2.3
-streamlit==1.42.0
 pydantic==2.10.6
+openai==1.59.8
+fastapi==0.115.6
+numpy==2.2.3
+pandas==2.2.3
+uvicorn==0.34.0
+streamlit==1.42.0
+qdrant-client==1.13.2
+
