--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,3 +41,16 @@ services:
     environment:
       - STREAMLIT_PORT=8501
       - CHAT_API_URL=$CHAT_API_URL
+  
+  qdrant:
+    image: qdrant/qdrant:latest
+    container_name: qdrant-db
+    restart: always
+    ports:
+      - "6333:6333"
+      - "6334:6334"
+    volumes:
+      - qdrant_data:/qdrant/storage
+
+volumes:
+  qdrant_data:
