--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,9 +18,13 @@ services:
     environment:
       - FASTAPI_PORT=8000
       - OPENAI_API_KEY=$OPENAI_API_KEY
+      - OPENAI_MODEL=$OPENAI_MODEL
       - CHAT_API_URL=$CHAT_API_URL
       - LOKI_URL=$LOKI_URL
       - LOKI_JOB_NAME=$LOKI_JOB_NAME
+      - QDRANT_PORT=$QDRANT_PORT
+      - QDRANT_HOST=$QDRANT_HOST
+      - QDRANT_COLLECTION_NAME=$QDRANT_COLLECTION_NAME
 
   frontend:
     build:
@@ -47,7 +51,7 @@ services:
     container_name: qdrant-db
     restart: always
     ports:
-      - "6333:6333"
+      - "${QDRANT_PORT:-6333}:6333"
       - "6334:6334"
     volumes:
       - qdrant_data:/qdrant/storage
