--- a/sample.env
+++ b/sample.env
@@ -1,13 +1,18 @@
 UID=1000
 GID=1001
 
-# frontend
+# Frontend
 CHAT_API_URL=http://host.docker.internal:8000
 
-# dinugs
+# Dinugs
 FASTAPI_PORT=8000
 STREAMLIT_PORT=8501
-OPENAI_API_KEY=OpenaiKeyHere
+OPENAI_API_KEY=ApiKeyHere
+OPENAI_MODEL=gpt-4o-mini
 LOKI_URL=http://host.docker.internal:3100
 LOKI_JOB_NAME=cpu_monitor
 
+# Qdrant
+QDRANT_COLLECTION_NAME=simulation_logs
+QDRANT_PORT=6333
+QDRANT_HOST=http://host.docker.internal
