📝 chore: Update CI workflow to build Docker image with TARGET argument and modify Dockerfile to conditionally install sentence-transformers

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,10 @@ jobs:
       - name: Copy sample.env to .env
         run: cp sample.env .env
 
+      - name: Build Docker Image (with TARGET argument)
+        run: |
+          docker build --build-arg TARGET=build-agent --no-cache -t dingus-build-agent .
+
       - name: Start Docker Compose Services
         run: |
           docker compose up --build -d
