--- a/Dockerfile.dingus
+++ b/Dockerfile.dingus
@@ -34,6 +34,11 @@ ENV PATH="$ENV_PATH/bin:$PATH" \
 COPY --chown=$USER_NAME:$USER_NAME /requirements.txt /src/requirements.txt
 RUN pip install --upgrade pip && pip install -r /src/requirements.txt
 
+# Avoid large package on build agent
+RUN if [ "$TARGET" != "build-agent" ]; then \
+        pip install sentence-transformers==3.4.1; \
+    fi
+
 # Copy source code
 COPY --chown=$USER_NAME:$USER_NAME ./scripts /scripts/ \
     ./src /src/ \
@@ -44,7 +49,6 @@ COPY --chown=$USER_NAME:$USER_NAME ./src/entrypoint.sh /scripts/entrypoint.sh
 # Ensure scripts have execute permissions
 RUN chmod +x /scripts/
 RUN dos2unix /scripts/
-
 
 # Add aliases
 RUN echo 'alias format-checks="bash /scripts/format-checks.sh"' >> /home/$USER_NAME/.bashrc
