--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   TARGET: build-agent
-  
+
 jobs:
   code-checks:
     runs-on: ubuntu-latest
@@ -19,8 +19,9 @@ jobs:
       - name: Set up Docker BuildX
         uses: docker/setup-buildx-action@v3
 
-      - name: Copy sample.env to .env
+      - name: Create .env
         run: cp sample.env .env
+        run: echo "TARGET=build-agent" >> .env
 
       - name: Start Docker Compose Services
         run: |
