📝 chore: Update Dockerfile and CI workflow to set TARGET argument for build-agent and adjust installation conditions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,8 @@ jobs:
 
       - name: Start Docker Compose Services
         run: |
-          docker compose build --build-arg TARGET=build-agent
+          sed -i 's/ARG TARGET=default/ARG TARGET=build-agent/' Dockerfile.dingus
+          docker compose up --build
           docker ps  # Debugging: list running containers
 
       - name: Run Code Checks
