--- a/Dockerfile.dingus
+++ b/Dockerfile.dingus
@@ -35,6 +35,8 @@ COPY --chown=$USER_NAME:$USER_NAME /requirements.txt /src/requirements.txt
 RUN pip install --upgrade pip && pip install -r /src/requirements.txt
 
 # Avoid large package on build agent
+ARG TARGET=default
+RUN echo "Building for TARGET=$TARGET"
 RUN if [ "${TARGET}" != "build-agent" ]; then \
         pip install sentence-transformers==3.4.1; \
     fi
