🔗 feat: Add Kubernetes integration with configuration and summary retrieval

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       - QDRANT_PORT=$QDRANT_PORT
       - QDRANT_HOST=$QDRANT_HOST
       - QDRANT_COLLECTION_NAME=$QDRANT_COLLECTION_NAME
+      - KUBE_CONFIG_PATH=$KUBE_CONFIG_PATH
 
   frontend:
     build:
