--- a/sample.env
+++ b/sample.env
@@ -16,3 +16,6 @@ LOKI_JOB_NAME=cpu_monitor
 QDRANT_COLLECTION_NAME=simulation_logs
 QDRANT_PORT=6333
 QDRANT_HOST=http://host.docker.internal
+
+# k8
+KUBE_CONFIG_PATH=file_path/config.yaml
