--- a/sample.env
+++ b/sample.env
@@ -18,4 +18,4 @@ QDRANT_PORT=6333
 QDRANT_HOST=http://host.docker.internal
 
 # k8
-KUBE_CONFIG_PATH=file_path/config.yaml
+KUBE_CONFIG_PATH=/.kubs/config.yaml
