--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - ./logs:/logs
       - ./assets:/assets
       - ./scripts:/scripts
+      - ./.kube:/.kube
     environment:
       - FASTAPI_PORT=8000
       - OPENAI_API_KEY=$OPENAI_API_KEY
