--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       args:
         UID: ${UID}
         GID: ${GID}
+    network_mode: "host"
     ports:
       - "${FASTAPI_PORT:-8000}:8000"
     container_name: dingus
@@ -17,6 +18,7 @@ services:
       - ./scripts:/scripts
       - ./.kube:/.kube
     environment:
+      - KUBECONFIG=$KUBE_CONFIG_PATH
       - FASTAPI_PORT=8000
       - OPENAI_API_KEY=$OPENAI_API_KEY
       - OPENAI_MODEL=$OPENAI_MODEL
