--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,10 @@ jobs:
       - name: Set up Docker BuildX
         uses: docker/setup-buildx-action@v3
 
-      - name: Create .env
+      - name: Create .env and dir
         run: |
           cp sample.env .env
+          mkdir -p .kube
 
       - name: Start Docker Compose Services
         run: |
