--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Create .env and dir
         run: |
           cp sample.env .env
-          mkdir -p .kube
+          mkdir -p .kube logs data
 
       - name: Start Docker Compose Services
         run: |
