🔧 chore: Update GitHub Actions workflow to set permissions for .kube, logs, and data directories

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,11 @@ jobs:
         run: |
           cp sample.env .env
           mkdir -p .kube logs data
+          chmod -R 777 .kube logs data
 
       - name: Start Docker Compose Services
         run: |
-          docker compose up --build
+          docker compose up --build -d
           docker ps  # Debugging: list running containers
 
       - name: Run Code Checks
