🔧 chore: Remove debugging line from GitHub Actions workflow for cleaner output

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Start Docker Compose Services
         run: |
           docker compose up --build -d
-          docker ps  # Debugging: list running containers
+          docker ps
 
       - name: Run Code Checks
         run: |
